feat: add default documentation pages for API Products
https://gravitee.atlassian.net/browse/PORTAL-96